--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         h1, h2, h3, p, ul, li {
-            font-family: 'Adonis', sans-serif;
+            font-family: 'Sloop script pro', serif;
         }
 
         img {
