--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-    <img id="main-logo" src="logo.jpg" alt="AoD, All of Disorder">
+    <img id="main-logo" src="https://github.com/9chaen/AoD/blob/main/logo.ai" alt="AoD, All of Disorder">
     <p id="main-description">각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다. 책과 굿즈들을 구경하세요.</p>
 
     <nav>
