--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: 'Tlab사월의 봄 R TTF', serif;
+            font-family: 'Tlab사월의 봄 R TTF', 'Constantia' serif;
         }
 
         body, h1, h2, h3, p, ul, li {
@@ -16,7 +16,7 @@
         }
 
         h1, h2, h3, p, ul, li {
-            font-family: 'Tlab사월의 봄 R TTF', serif;
+            font-family: 'Tlab사월의 봄 R TTF','Constantia' serif;
         }
 
         img {
