--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <p id="author-text"></p>
     </div>
 
-    <img id="main-logo" src="https://example.com/main-logo.png" alt="AoD Logo">
+    <img id="main-logo" src="https://github.com/9chaen/AoD/blob/main/%EB%A1%9C%EA%B3%A0.jpg" alt="AoD Logo">
 
     <div id="main-description">
         <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다. 책과 굿즈들을 구경하세요.</p>
