--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div id="books-container">
         <div class="book-info">
-            <img src="https://example.com/book1.jpg" alt="Book 1">
+            <img src="https://github.com/9chaen/AoD/blob/main/%EB%8B%A4%EC%84%AF%20%EB%B2%88%EC%A7%B8%20%EC%9C%A0%EC%84%9C%2000.jpg" alt="Book 1">
             <p>다섯 번째 유서</p>
         </div>
         <div class="book-info">
