--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             <p>다섯 번째 유서</p>
         </div>
         <div class="book-info">
-            <img src="https://example.com/book2.jpg" alt="Book 2">
+            <img src="https://github.com/9chaen/AoD/blob/main/%EC%9A%B0%EB%A6%AC%20%EC%A4%91%20%EC%95%84%EB%AC%B4%EB%8F%84%20%EA%B7%B8%EA%B3%B3%EC%9D%84%20%EB%AA%A8%EB%A5%B8%EB%8B%A4%2000.JPG
+" alt="Book 2">
             <p>우리 중 아무도 그곳을 모른다</p>
         </div>
         <div class="book-info">
