--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p>우리 중 아무도 그곳을 모른다</p>
         </div>
         <div class="book-info">
-            <img src="https://example.com/book3.jpg" alt="Book 3">
+            <img src="https://github.com/9chaen/AoD/blob/main/%EC%9A%B0%EC%9A%B8%EC%A6%9D%2000.JPG" alt="Book 3">
             <p>우울증</p>
         </div>
         <div class="book-info">
