--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
     
     <div id="authors-container">
         <div class="author-info" onclick="showAuthorInfo('구채현')">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EA%B5%AC%EC%B1%84%ED%98%84.JPG" alt="구채현">
+            <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
             <p>구채현</p>
         </div>
         <div class="author-info" onclick="showAuthorInfo('여연경')">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EC%97%AC%EC%97%B0%EA%B2%BD.JPG" alt="여연경">
+            <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
             <p>여연경</p>
         </div>
         <div class="author-info" onclick="showAuthorInfo('무명')">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EB%AC%B4%EB%AA%85.jpg" alt="무명">
+            <img src="https://github.com/9chaen/AoD/무명명.jpg" alt="무명">
             <p>무명</p>
         </div>
     </div>
@@ -128,7 +128,7 @@
 
     </div>
 
-    <img id="main-logo" src="https://github.com/9chaen/AoD/blob/main/%EB%A1%9C%EA%B3%A0.jpg" alt="AoD Logo">
+    <img id="main-logo" src="https://github.com/9chaen/로고.jpg" alt="AoD Logo">
 
     <div id="main-description">
         <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다. 책과 굿즈들을 구경하세요.</p>
@@ -136,20 +136,20 @@
 
     <div id="books-container">
         <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EB%8B%A4%EC%84%AF%20%EB%B2%88%EC%A7%B8%20%EC%9C%A0%EC%84%9C%2000.jpg" alt="Book 1">
+            <img src="https://github.com/9chaen/AoD/다섯 번째 유서 00.jpg" alt="Book 1">
             <p>다섯 번째 유서</p>
         </div>
         <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EC%9A%B0%EB%A6%AC%20%EC%A4%91%20%EC%95%84%EB%AC%B4%EB%8F%84%20%EA%B7%B8%EA%B3%B3%EC%9D%84%20%EB%AA%A8%EB%A5%B8%EB%8B%A4%2000.JPG
+            <img src="https://github.com/9chaen/AoD/우리 중 아무도 그곳을 모른다 00.JPG
 " alt="Book 2">
             <p>우리 중 아무도 그곳을 모른다</p>
         </div>
         <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EC%9A%B0%EC%9A%B8%EC%A6%9D%2000.JPG" alt="Book 3">
+            <img src="https://github.com/9chaen/AoD/우울증 00.JPG" alt="Book 3">
             <p>우울증</p>
         </div>
         <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/blob/main/%EC%82%AC%EB%82%9A%EC%96%B4%2000.JPG" alt="Book 4">
+            <img src="https://github.com/9chaen/AoD/사낚어 00.JPG" alt="Book 4">
             <p>사람낚는어부가되기에는낚아야할생각이너무많아만든책</p>
         </div>
         <div class="book-info">
@@ -172,13 +172,13 @@
             var authorText = document.getElementById('author-text');
             
             if (authorName === '구채현') {
-                authorImg.src = 'https://github.com/9chaen/AoD/blob/main/%EA%B5%AC%EC%B1%84%ED%98%84.JPG';
+                authorImg.src = 'https://github.com/9chaen/AoD/구채현.JPG';
                 authorText.textContent = '구채현은 서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다. 때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.';
             } else if (authorName === '여연경') {
-                authorImg.src = 'https://github.com/9chaen/AoD/blob/main/%EC%97%AC%EC%97%B0%EA%B2%BD.JPG';
+                authorImg.src = 'https://github.com/9chaen/AoD/여연경.JPG';
                 authorText.textContent = '다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.';
             } else if (authorName === '무명') {
-                authorImg.src = 'https://github.com/9chaen/AoD/blob/main/%EB%AC%B4%EB%AA%85.jpg';
+                authorImg.src = 'https://github.com/9chaen/AoD/무명.jpg';
                 authorText.textContent = '무명은 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다.  책 [1989.5.35.]로 데뷔하여 [What\'s in my blue?] 등의 책을 집필하였습니다.';
             }
 
