--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
         <a href="#">goods shop</a>
         <a href="#">instagram</a>
     </div>
-    
+       <div id="author-description" style="display: none;">
+        <img id="author-img" src="" alt="">
+        <p id="author-text"></p>
+           
     <div id="authors-container">
         <div class="author-info" onclick="showAuthorInfo('구채현')">
             <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
