--- a/index.html
+++ b/index.html
@@ -1,192 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AoD, All of Disorder</title>
+    <title>AoD - All of Disorders</title>
     <style>
         body {
-            font-family: 'Sandoll 명조Neo1', Constantia, sans-serif;
             background-color: #fffffa;
+            font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
             color: #9298cc;
-            margin: 0;
-            padding: 0;
         }
-
-        #main-heading {
-            font-size: 3rem;
-            text-align: left;
-            margin: 20px 0 0 20px;
-            padding: 0;
+        h1 {
+            font-size: 36px;
         }
-
-        #menu {
-            margin-top: 20px;
-            text-align: left;
-            margin-left: 20px;
-        }
-
-        #menu a {
+        a {
             color: #9298cc;
             text-decoration: none;
-            margin-right: 20px;
         }
-
-        #menu a:hover {
+        a:hover {
             text-decoration: none;
         }
-
-        #authors-container {
-            text-align: left;
-            margin-left: 20px;
-            margin-top: 20px;
-        }
-
-        .author-info {
-            display: inline-block;
-            margin-right: 20px;
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .author-info img {
-            width: 200px;
-            height: 200px;
+        #logo {
             display: block;
-            cursor: pointer;
             margin: 0 auto;
-        }
-
-        .author-info p {
-            text-align: left;
-            margin-left: 20px;
-        }
-
-        #main-logo {
-            display: block;
-            margin: 50px auto;
-            width: 200px;
-            height: auto;
-        }
-
-        #main-description {
             text-align: center;
-            margin-bottom: 50px;
         }
-
-        #books-container {
-            text-align: left;
-            margin-left: 20px;
+        #description {
+            text-align: center;
             margin-top: 20px;
-        }
-
-        .book-info {
-            display: inline-block;
-            margin-right: 20px;
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .book-info img {
-            width: 200px;
-            height: 200px;
-            display: block;
-            cursor: pointer;
-            margin: 0 auto;
-        }
-
-        .book-info p {
-            text-align: left;
-            margin-left: 20px;
         }
     </style>
 </head>
 <body>
-    <h1 id="main-heading">AoD, All of Disorder</h1>
-    <div id="menu">
-        <a href="#">authors</a>
-        <a href="#">books</a>
-        <a href="#">goods shop</a>
-        <a href="#">instagram</a>
+    <h1>AoD - All of Disorders</h1>
+    <nav>
+        <ul>
+            <li><a href="authors.html">authors</a></li>
+            <li><a href="books.html">books</a></li>
+            <li><a href="goods.html">goods shop</a></li>
+            <li><a href="instagram.html">instagram</a></li>
+        </ul>
+    </nav>
+    <div id="logo">
+        <img src="logo.jpg" alt="AoD Logo">
     </div>
-       <div id="author-description" style="display: none;">
-        <img id="author-img" src="" alt="">
-        <p id="author-text"></p>
-           
-    <div id="authors-container">
-        <div class="author-info" onclick="showAuthorInfo('구채현')">
-            <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
-            <p>구채현</p>
-        </div>
-        <div class="author-info" onclick="showAuthorInfo('여연경')">
-            <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
-            <p>여연경</p>
-        </div>
-        <div class="author-info" onclick="showAuthorInfo('무명')">
-            <img src="https://github.com/9chaen/AoD/무명명.jpg" alt="무명">
-            <p>무명</p>
-        </div>
-    </div>
-
-
-    </div>
-
-    <img id="main-logo" src="https://github.com/9chaen/로고.jpg" alt="AoD Logo">
-
-    <div id="main-description">
+    <div id="description">
         <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다. 책과 굿즈들을 구경하세요.</p>
     </div>
-
-    <div id="books-container">
-        <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/다섯 번째 유서 00.jpg" alt="Book 1">
-            <p>다섯 번째 유서</p>
-        </div>
-        <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/우리 중 아무도 그곳을 모른다 00.JPG
-" alt="Book 2">
-            <p>우리 중 아무도 그곳을 모른다</p>
-        </div>
-        <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/우울증 00.JPG" alt="Book 3">
-            <p>우울증</p>
-        </div>
-        <div class="book-info">
-            <img src="https://github.com/9chaen/AoD/사낚어 00.JPG" alt="Book 4">
-            <p>사람낚는어부가되기에는낚아야할생각이너무많아만든책</p>
-        </div>
-        <div class="book-info">
-            <img src="https://example.com/book5.jpg" alt="Book 5">
-            <p>What's in my blue?</p>
-        </div>
-        <div class="book-info">
-            <img src="https://example.com/book6.jpg" alt="Book 6">
-            <p>우울 파르페</p>
-        </div>
-        <div class="book-info">
-            <img src="https://example.com/book7.jpg" alt="Book 7">
-            <p>1989.5.35.</p>
-        </div>
-    </div>
-
-    <script>
-        function showAuthorInfo(authorName) {
-            var authorImg = document.getElementById('author-img');
-            var authorText = document.getElementById('author-text');
-            
-            if (authorName === '구채현') {
-                authorImg.src = 'https://github.com/9chaen/AoD/구채현.JPG';
-                authorText.textContent = '구채현은 서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다. 때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.';
-            } else if (authorName === '여연경') {
-                authorImg.src = 'https://github.com/9chaen/AoD/여연경.JPG';
-                authorText.textContent = '다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.';
-            } else if (authorName === '무명') {
-                authorImg.src = 'https://github.com/9chaen/AoD/무명.jpg';
-                authorText.textContent = '무명은 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다.  책 [1989.5.35.]로 데뷔하여 [What\'s in my blue?] 등의 책을 집필하였습니다.';
-            }
-
-            document.getElementById('author-description').style.display = 'block';
-        }
-    </script>
 </body>
 </html>
