--- a/authors.html
+++ b/authors.html
@@ -1,40 +1,56 @@
-<!<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AoD, All of Disorder</title>
+    <title>Authors</title>
     <style>
         body {
-            font-family: 'Sandoll 명조Neo1', Constantia, sans-serif;
             background-color: #fffffa;
+            font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
             color: #9298cc;
-            margin: 0;
-            padding: 0;
         }
-
-        #main-heading {
-            font-size: 3rem;
+        h1 {
+            font-size: 36px;
+            text-align: center;
+        }
+        .author {
+            margin-bottom: 20px;
             text-align: left;
-            margin: 20px 0 0 20px;
-            padding: 0;
         }
+        .author img {
+            width: 50%;
+            max-width: 3904px;
+            height: auto;
+        }
+        .author-description {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Authors</h1>
+    <div class="author">
+        <a href="author 구채현.html">
+            <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
+            <div class="author-description">구채현 - 서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다. 때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.</div>
+        </a>
+    </div>
+    <div class="author">
+        <a href="author 여연경.html">
+            <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
+            <div class="author-description">여연경 - 다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.</div>
+        </a>
+    </div>
+    <div class="author">
+        <a href="author 무명.html">
+            <img src="https://github.com/9chaen/AoD/무명.jpg" alt="무명">
+            <div class="author-description">무명 - 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다. 책 [1989.5.35.]로 데뷔하여 [What's in my blue?] 등의 책을 집필하였습니다.</div>
+        </a>
+    </div>
+</body>
+</html>
 
-        #menu {
-            margin-top: 20px;
-            text-align: left;
-            margin-left: 20px;
-        }
-
-        #menu a {
-            color: #9298cc;
-            text-decoration: none;
-            margin-right: 20px;
-        }
-
-        #menu a:hover {
-            text-decoration: none;
-        }
 
         #authors-container {
             text-align: left;
