--- a/author 여연경.html
+++ b/author 여연경.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <h1>여연경</h1>
-    <img src="author2.jpg" alt="여연경">
+    <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
     <div class="author-description">
         <p>다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.</p>
     </div>
