--- a/authors.html
+++ b/authors.html
@@ -11,19 +11,19 @@
             color: #9298cc;
         }
         h1 {
-            font-size: 36px;
+            font-size: 48px;
             text-align: center;
         }
-        .author {
-            margin-bottom: 20px;
-            text-align: left;
+        .author-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
         }
-        .author img {
-            width: 50%;
-            max-width: 3904px;
-            height: auto;
+       .author-item {
+            margin: 20px;
         }
-        .author-description {
+        .author-name {
             margin-top: 10px;
         }
     </style>
