--- a/authors.html
+++ b/authors.html
@@ -9,10 +9,11 @@
             background-color: #fffffa;
             font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
             color: #9298cc;
+            text-align: center;
         }
         h1 {
             font-size: 48px;
-            text-align: center;
+            margin-top: 20px;
         }
         .author-container {
             display: flex;
@@ -20,7 +21,7 @@
             justify-content: center;
             margin-top: 20px;
         }
-       .author-item {
+        .author-item {
             margin: 20px;
         }
         .author-name {
@@ -28,59 +29,27 @@
         }
     </style>
 </head>
-    <body>
-    <h1 id="main-heading">AoD, All of Disorder</h1>
-    <div id="menu">
-        <a href="#">authors</a>
-        <a href="#">books</a>
-        <a href="#">goods shop</a>
-        <a href="#">instagram</a>
-    </div>
-</body>
-    
 <body>
     <h1>Authors</h1>
-    <div class="author">
-        <a href="author 구채현.html">
-            <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
-            <div class="author-description">구채현</div>
-        </a>
-    </div>
-    <div class="author">
-        <a href="author 여연경.html">
-            <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
-            <div class="author-description">여연경</div>
-        </a>
-    </div>
-    <div class="author">
-        <a href="author 무명.html">
-            <img src="https://github.com/9chaen/AoD/무명.jpg" alt="무명">
-            <div class="author-description">무명</div>
-        </a>
+    <div class="author-container">
+        <div class="author-item">
+            <a href="author_구채현.html">
+                <img src="구채현.jpg" alt="구채현">
+                <p class="author-name">구채현</p>
+            </a>
+        </div>
+        <div class="author-item">
+            <a href="author_여연경.html">
+                <img src="여연경.jpg" alt="여연경">
+                <p class="author-name">여연경</p>
+            </a>
+        </div>
+        <div class="author-item">
+            <a href="author_무명.html">
+                <img src="무명.jpg" alt="무명">
+                <p class="author-name">무명</p>
+            </a>
+        </div>
     </div>
 </body>
-</html>
-
-
-        #authors-container {
-            text-align: left;
-            margin-left: 100px;
-            margin-top:100px;
-        }
-
-        .author-info {
-            display: inline-block;
-            margin-right: 100px;
-            margin-bottom: 100px;
-            text-align: left;
-        }
-
-        .author-info img {
-            width: 300px;
-            height: 300px;
-            display: block;
-        }
-    </style>
-</head>
-
 </html>
