--- a/authors.html
+++ b/authors.html
@@ -34,22 +34,28 @@
     <div class="author-container">
         <div class="author-item">
             <a href="author_구채현.html">
-                <img src="구채현.jpg" alt="구채현">
+                <img src="구채현.JPG" width="100px" height="auto" alt="구채현">
                 <p class="author-name">구채현</p>
             </a>
         </div>
         <div class="author-item">
             <a href="author_여연경.html">
-                <img src="여연경.jpg" alt="여연경">
+                <img src="여연경.JPG" width="100px" height="auto" alt="여연경">
                 <p class="author-name">여연경</p>
             </a>
         </div>
         <div class="author-item">
             <a href="author_무명.html">
-                <img src="무명.jpg" alt="무명">
+                <img src="무명.jpg" width="100px" height="auto" alt="무명">
                 <p class="author-name">무명</p>
             </a>
         </div>
     </div>
+        <div class="image-container">
+        <img src="구채현.JPG" width="100px" height="auto" alt="구채현">
+        <img src="여연경.JPG" width="100px" height="auto" alt="여연경">
+        <img src="무명.jpg" width="100px" height="auto" alt="무명">
+    </div>
+
 </body>
 </html>
