--- a/authors.html
+++ b/authors.html
@@ -30,7 +30,17 @@
     </style>
 </head>
 <body>
-    <h1>Authors</h1>
+     <h1>AoD - All of Disorders</h1>
+     <h2>Authors</h2>
+    <nav>
+        <ul>
+            <li><a href="authors.html">authors</a></li>
+            <li><a href="books.html">books</a></li>
+            <li><a href="goods.html">goods shop</a></li>
+            <li><a href="instagram.html">instagram</a></li>
+        </ul>
+    </nav>
+    
     <div class="author-container">
         <div class="author-item">
             <a href="author_구채현.html">
