--- a/authors.html
+++ b/authors.html
@@ -18,14 +18,14 @@
         .author-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: left;
             margin-top: 20px;
         }
         .author-item {
-            margin: 20px;
+            margin: 50px;
         }
         .author-name {
-            margin-top: 10px;
+            margin-top: 7px;
         }
     </style>
 </head>
