--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         </ul>
     </nav>
     <div id="logo">
-        <img src="logo.jpg" alt="AoD Logo">
+        <img src="로고.jpg" alt="AoD Logo">
     </div>
     <div id="description">
-        <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다. 책과 굿즈들을 구경하세요.</p>
+        <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.
+            책과 굿즈들을 구경하세요.</p>
     </div>
 </body>
 </html>
