--- a/authors.html
+++ b/authors.html
@@ -27,6 +27,10 @@
         .author-name {
             margin-top: 7px;
         }
+        .nav-container {
+            justify-content: left;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -60,6 +64,8 @@
                 <p class="author-name">무명</p>
             </a>
         </div>
+
+      
 
 </body>
 </html>
