--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -29,6 +29,27 @@
             text-align: center;
             margin-top: 20px;
         }
+        /* 링크 스타일 제거 및 글자 색상 지정 */
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav a {
+            text-decoration: none; /* 밑줄 제거 */
+            color: #9298cc; /* 버튼 글자색 */
+            padding: 10px; /* 버튼 간격 조절 */
+        }
+
+        /* 버튼 사이 공백 조절 */
+        nav a:not(:last-child) {
+            margin-right: 20px;
+        }
+
     </style>
 </head>
 <body>
