--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AoD - All of Disorders</title>
+    <title>AoD, All of Disorders</title>
     <style>
         body {
             background-color: #fffffa;
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>AoD - All of Disorders</h1>
+    <h1>AoD, All of Disorders</h1>
     <nav>
         <ul>
             <li><a href="authors.html">authors</a></li>
