--- a/authors.html
+++ b/authors.html
@@ -18,11 +18,12 @@
         .author-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: left;
+            justify-content: left; /* 수정: 가운데 정렬로 변경 */
             margin-top: 20px;
         }
         .author-item {
             margin: 35px;
+            text-align: center; /* 추가: 이미지와 이름 가운데 정렬 */
         }
         .author-name {
             margin-top: 7px;
@@ -31,8 +32,8 @@
     </style>
 </head>
 <body>
-     <h1>AoD - All of Disorders</h1>
-     <h2>Authors</h2>
+    <h1>AoD - All of Disorders</h1>
+    <h2>Authors</h2>
     <nav>
         <ul>
             <li><a href="authors.html">authors</a></li>
@@ -61,8 +62,10 @@
                 <p class="author-name">무명</p>
             </a>
         </div>
+    </div>
+</body>
+</html>
 
-      
 
 </body>
 </html>
