--- a/authors.html
+++ b/authors.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>AoD - All of Disorders</h1>
+    <h1>AoD, All of Disorders</h1>
     <h2>Authors</h2>
     <nav>
         <ul>
