--- a/authors.html
+++ b/authors.html
@@ -15,6 +15,11 @@
             font-size: 48px;
             margin-top: 20px;
         }
+
+        h2 {
+            font-size: 35px;
+            margin-top: 20px;
+        }
         .author-container {
             display: flex;
             flex-wrap: wrap;
@@ -23,7 +28,7 @@
         }
         .author-item {
             margin: 35px;
-            text-align: center; /* 추가: 이미지와 이름 가운데 정렬 */
+            text-align: left; /* 추가: 이미지와 이름 가운데 정렬 */
         }
         .author-name {
             margin-top: 7px;
