--- a/authors.html
+++ b/authors.html
@@ -50,19 +50,19 @@
     
     <div class="author-container">
         <div class="author-item">
-            <a href="author_구채현.html">
+            <a href="author 구채현.html">
                 <img src="구채현.JPG" width="300px" height="auto" alt="구채현">
                 <p class="author-name">구채현</p>
             </a>
         </div>
         <div class="author-item">
-            <a href="author_여연경.html">
+            <a href="author 여연경.html">
                 <img src="여연경.JPG" width="300px" height="auto" alt="여연경">
                 <p class="author-name">여연경</p>
             </a>
         </div>
         <div class="author-item">
-            <a href="author_무명.html">
+            <a href="author 무명.html">
                 <img src="무명.jpg" width="300px" height="auto" alt="무명">
                 <p class="author-name">무명</p>
             </a>
