--- a/authors.html
+++ b/authors.html
@@ -33,6 +33,17 @@
         .author-name {
             margin-top: 7px;
         }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0; /* 추가: 기본 마진 제거 */
+        }
+
+nav ul li {
+    display: inline;
+    margin-right: 20px; /* 각 항목 사이 간격 조절 */
+}
+
        
     </style>
 </head>
