--- a/author 구채현.html
+++ b/author 구채현.html
@@ -12,7 +12,7 @@
             text-align: center;
         }
         h1 {
-            font-size: 36px;
+            font-size: 25px;
         }
         img {
             max-width: 50%;
@@ -36,8 +36,8 @@
     </style>
 </head>
 <body>
-    <h1>구채현</h1>
-    <img src="https://github.com/9chaen/AoD/구채현.JPG" alt="구채현">
+    <h1>author</h1>
+    <img src="구채현.JPG" alt="구채현">
     <div class="author-description">
         <p>서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다. 때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.</p>
     </div>
