--- a/author 구채현.html
+++ b/author 구채현.html
@@ -33,6 +33,15 @@
             border: none;
             background: none;
         }
+        .author-container .author-item {
+            width: 300px; /* 이미지와 <p> 요소의 폭을 동일하게 설정 */
+        }
+
+        .author-container img {
+            width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: auto; /* 이미지의 세로 비율을 유지함 */
+        }
+
     </style>
 </head>
 <body>
