--- a/author 여연경.html
+++ b/author 여연경.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Author 여연경</title>
+    <title>Author 구채현</title>
     <style>
         body {
             background-color: #fffffa;
@@ -12,7 +12,7 @@
             text-align: center;
         }
         h1 {
-            font-size: 36px;
+            font-size: 25px;
         }
         img {
             max-width: 50%;
@@ -33,11 +33,20 @@
             border: none;
             background: none;
         }
+        .author-container .author-item {
+            width: 200px; /* 이미지와 <p> 요소의 폭을 동일하게 설정 */
+        }
+
+        .author-container img {
+            width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: auto; /* 이미지의 세로 비율을 유지함 */
+        }
+
     </style>
 </head>
 <body>
-    <h1>여연경</h1>
-    <img src="https://github.com/9chaen/AoD/여연경.JPG" alt="여연경">
+    <h1>author</h1>
+    <img src="여연경.JPG" alt="여연경">
     <div class="author-description">
         <p>다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.</p>
     </div>
