--- a/author 무명.html
+++ b/author 무명.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Author 무명</title>
+    <title>Author 구채현</title>
     <style>
         body {
             background-color: #fffffa;
@@ -12,7 +12,7 @@
             text-align: center;
         }
         h1 {
-            font-size: 36px;
+            font-size: 25px;
         }
         img {
             max-width: 50%;
@@ -33,11 +33,20 @@
             border: none;
             background: none;
         }
+        .author-container .author-item {
+            width: 200px; /* 이미지와 <p> 요소의 폭을 동일하게 설정 */
+        }
+
+        .author-container img {
+            width: 100%; /* 이미지가 부모 요소의 폭을 채우도록 설정 */
+            height: auto; /* 이미지의 세로 비율을 유지함 */
+        }
+
     </style>
 </head>
 <body>
-    <h1>무명</h1>
-    <img src="https://github.com/9chaen/AoD/무명.jpg" alt="무명">
+    <h1>author</h1>
+    <img src="무명.jpg" alt="무명">
     <div class="author-description">
         <p>무명은 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다. 책 [1989.5.35.]로 데뷔하여 What's in my blue? 등의 책을 집필하였습니다.</p>
     </div>
