--- a/main.html
+++ b/main.html
@@ -49,6 +49,18 @@
         nav a:not(:last-child) {
             margin-right: 20px;
         }
+        
+        #logo {
+            width: 300px; /* 이미지 폭 설정 */
+            margin: 0 auto; /* 가운데 정렬을 위해 좌우 마진을 자동으로 설정 */
+        }
+
+        #description {
+            width: 300px; /* 텍스트 박스 폭 설정 */
+            margin: 20px auto; /* 위쪽 여백 추가 및 가운데 정렬을 위해 자동으로 설정된 좌우 마진과 상하 마진 추가 */
+            text-align: center; /* 텍스트 가운데 정렬 */
+        }
+
 
     </style>
 </head>
@@ -66,8 +78,7 @@
         <img src="로고.jpg" alt="AoD Logo">
     </div>
     <div id="description">
-        <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.
-            책과 굿즈들을 구경하세요.</p>
+        <p>각자에게 아픔이 될 수 있는 미세한 기억 조각까지 수집하고 가공하여 앞으로 나아갈 힘을 얻는 출판 편집 모임입니다.<br>책과 굿즈들을 구경하세요.</p>
     </div>
 </body>
 </html>
