--- a/author 구채현.html
+++ b/author 구채현.html
@@ -50,7 +50,7 @@
     <div class="author-description">
         <p>구채현은 서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다. 때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.</p>
     </div>
-    <button class="back-button" onclick="goBack()">뒤로가기</button>
+    <button class="back-button" onclick="goBack()">←</button>
 
     <script>
         function goBack() {
