--- a/author 무명.html
+++ b/author 무명.html
@@ -50,7 +50,7 @@
     <div class="author-description">
         <p>무명은 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다. 책 [1989.5.35.]로 데뷔하여 What's in my blue? 등의 책을 집필하였습니다.</p>
     </div>
-    <button class="back-button" onclick="goBack()">뒤로가기</button>
+    <button class="back-button" onclick="goBack()">←</button>
 
     <script>
         function goBack() {
