--- a/author 여연경.html
+++ b/author 여연경.html
@@ -50,7 +50,7 @@
     <div class="author-description">
         <p>다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생, 수능 중독에서 벗어난 지 1년차입니다.</p>
     </div>
-    <button class="back-button" onclick="goBack()">뒤로가기</button>
+    <button class="back-button" onclick="goBack()">←</button>
 
     <script>
         function goBack() {
