--- a/authors.html
+++ b/authors.html
@@ -48,7 +48,7 @@ nav ul li {
     </style>
 </head>
 <body>
-    <h1>AoD, All of Disorders</h1>
+    <h1><ul><li><a href="main.html">AoD, All of Disorders</a></li></ul></h1>
     <h2>Authors</h2>
     <nav>
         <ul>
@@ -56,6 +56,7 @@ nav ul li {
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
             <li><a href="instagram.html">instagram</a></li>
+            
         </ul>
     </nav>
     
