--- a/authors.html
+++ b/authors.html
@@ -48,7 +48,7 @@ nav ul li {
     </style>
 </head>
 <body>
-    <h1><ul><li><a href="main.html">AoD, All of Disorders</a></li></ul></h1>
+    <h1><ul><li><a href="index.html">AoD, All of Disorders</a></li></ul></h1>
     <h2>Authors</h2>
     <nav>
         <ul>
