--- a/author 구채현.html
+++ b/author 구채현.html
@@ -13,6 +13,8 @@
         }
         h1 {
             font-size: 25px;
+            position: center;
+            top: 20px
         }
         img {
             max-width: 50%;
