--- a/authors.html
+++ b/authors.html
@@ -23,12 +23,12 @@
         .author-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: left; /* 수정: 가운데 정렬로 변경 */
+            justify-content: left;
             margin-top: 20px;
         }
         .author-item {
             margin: 35px;
-            text-align: left; /* 추가: 이미지와 이름 가운데 정렬 */
+            text-align: left;
         }
         .author-name {
             margin-top: 7px;
