--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         }
         h1 {
             font-size: 36px;
+            margini-left: 35px
         }
         a {
             color: #9298cc;
@@ -33,6 +34,7 @@
         nav ul {
             list-style-type: none;
             padding: 0;
+            margin-left: 35px;
         }
 
         nav ul li {
