--- a/authors.html
+++ b/authors.html
@@ -58,6 +58,21 @@ nav ul li {
     display: inline;
     margin-right: 20px; /* 각 항목 사이 간격 조절 */
 } 
+
+h1 ul {
+   list-style-type: none;
+    padding: 0;
+}
+
+h1 ul li {
+    display: inline;
+}
+
+h1 a {
+    text-decoration: none; /* 밑줄 제거 */
+            color: #9298cc; /* 버튼 글자색 */
+            padding: 10px; /* 버튼 간격 조절 */
+}
     </style>
 </head>
 <body>
