--- a/authors.html
+++ b/authors.html
@@ -9,7 +9,7 @@
             background-color: #fffffa;
             font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
             color: #9298cc;
-            text-align: center;
+            text-align: left;
         }
         h1 {
             font-size: 48px;
