--- a/authors.html
+++ b/authors.html
@@ -73,6 +73,12 @@ h1 a {
             color: #9298cc; /* 버튼 글자색 */
             padding: 10px; /* 버튼 간격 조절 */
 }
+
+.author-name {
+    color: #9298cc; /* 텍스트 색상 */
+    text-decoration: none; /* 밑줄 제거 */
+}
+
     </style>
 </head>
 <body>
