--- a/authors.html
+++ b/authors.html
@@ -10,15 +10,18 @@
             font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
             color: #9298cc;
             text-align: left;
+            margin-left: 35px
         }
         h1 {
             font-size: 48px;
             margin-top: 20px;
+            margin-left: 35px
         }
 
         h2 {
             font-size: 35px;
             margin-top: 20px;
+            margin-left: 35px
         }
         .author-container {
             display: flex;
