--- a/author 구채현.html
+++ b/author 구채현.html
@@ -44,6 +44,9 @@
             height: auto; /* 이미지의 세로 비율을 유지함 */
         }
 
+        .author-description {
+            font-size: 13pt
+        }
     </style>
 </head>
 <body>
