--- a/authors.html
+++ b/authors.html
@@ -41,6 +41,7 @@
         nav ul {
             list-style-type: none;
             padding: 0;
+            margin-left: 35px;
         }
 
         nav ul li {
