--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             margin-right: 20px;
         }
 
+        .logo {
+            width: 100px;
+            height: auto;
+        }
+
     </style>
 </head>
 <body>
