--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Sandoll 명조Neo1", Constantia, sans-serif;
+            font-family: "Onul 아티클 부리 Regular", Constantia, sans-serif;
             color: #9298cc;
         }
         h1 {
