--- a/author 무명.html
+++ b/author 무명.html
@@ -23,6 +23,8 @@
         }
         .author-description {
             margin-top: 10px;
+            font-size: 13pt
+            line-height: 1.6;
         }
         .back-button {
             position: absolute;
