--- a/author 구채현.html
+++ b/author 구채현.html
@@ -48,7 +48,7 @@
 
         .author-description {
             font-size: 13pt
-            line-height: 1.6;
+            line-height: 1.6pt;
         }
     </style>
 </head>
