--- a/author 여연경.html
+++ b/author 여연경.html
@@ -24,7 +24,7 @@
         .author-description {
             margin-top: 10px;
             font-size: 13pt
-            line-height: 1.6;
+            line-height: 1.6pt;
         }
         .back-button {
             position: absolute;
