--- a/author 여연경.html
+++ b/author 여연경.html
@@ -7,7 +7,8 @@
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Onul 아티클 부리 Regular", "Constantia", sans-serif;
+            font-family: "Onul 아티클 부리 Regular", sans-serif;
+            font-family: "Constantia", sans-serif;
             color: #9298cc;
             text-align: center;
         }
