--- a/author 구채현.html
+++ b/author 구채현.html
@@ -25,7 +25,7 @@
         .author-description {
             margin-top: 20px;
             font-size: 13pt
-            line-height: 1.6;
+            line-height: 2pt;
         }
         .back-button {
             position: absolute;
