--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         #description {
             text-align: center;
             margin-top: 20px;
+     
+        #description p {
+    line-height: 20pt;
+}
+
         }
         /* 링크 스타일 제거 및 글자 색상 지정 */
         nav ul {
