--- a/authors.html
+++ b/authors.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Onul 아티클 부리 Regular", Constantia, sans-serif;
+            font-family: "Constantia", sans-serif;
             color: #9298cc;
             text-align: left;
             margin-left: 35px
