--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             margin-top: 20px;
      
         #description p {
-    line-height: 20pt;
+            font-size: 13pt;
+            line-height: 20pt;
 }
 
         }
