--- a/authors.html
+++ b/authors.html
@@ -76,7 +76,7 @@ h1 a {
             padding: 10px; /* 버튼 간격 조절 */
 }
 
-.author-name {
+p class {
     color: #9298cc; /* 텍스트 색상 */
     text-decoration: none; /* 밑줄 제거 */
 }
