--- a/books.html
+++ b/books.html
@@ -9,7 +9,8 @@
             background-color: #fffffa;
             font-family: "Constantia", "Onul 아티클 부리 Regular", sans-serif;
             color: #9298cc;
-            text-align: center;
+            text-align: left;
+            margin-left: 35px
         }
         h1 {
             font-size: 48px;
