--- a/books.html
+++ b/books.html
@@ -15,6 +15,7 @@
         h1 {
             font-size: 48px;
             margin-top: 20px;
+            margin-left: 30px
         }
         .book-container {
             display: flex;
