--- a/books.html
+++ b/books.html
@@ -18,13 +18,10 @@
             margin-left: 30px
         }
         .book-container {
-            display: flex;
+             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-start;
+            justify-content: left;
             margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 80%;
         }
         .book-item {
             margin: 20px;
