--- a/books.html
+++ b/books.html
@@ -28,7 +28,9 @@
             text-align: left;
         }
         .book-title {
-            margin-top: 10px;
+            margin-top: 7px;
+            color: #9298cc; /* 텍스트 색상 */
+            text-decoration: none; /* 밑줄 제거 */
         }
     </style>
 </head>
