--- a/books.html
+++ b/books.html
@@ -18,15 +18,18 @@
             margin-left: 30px
         }
         .book-container {
-             display: flex;
+            display: flex;
             flex-wrap: wrap;
-            justify-content: left;
+            justify-content: flex-start;
             margin-top: 20px;
         }
+    
         .book-item {
-            margin: 35px;
-            text-align: left;
+            flex: 0 0 20%;
+            max-width: 20%;
+            padding: 10px;
         }
+
         .book-title {
             margin-top: 7px;
             color: #9298cc; /* 텍스트 색상 */
