--- a/author 여연경.html
+++ b/author 여연경.html
@@ -15,7 +15,13 @@
             font-size: 25px;
             position: center;
             top: 20px
+        }               
+        h2 {
+            font-size: 20px;
+            position: center;
+            top: 20px
         }
+        
         img {
             max-width: 30%;
             height: auto;
@@ -50,6 +56,7 @@
 </head>
 <body>
     <h1>author</h1>
+    <h2>여연경</h2>
     <img src="여연경.JPG" alt="여연경">
     <div class="author-description">
         <p>다섯 번째 유서, 우울 파르페의 저자, 2002년 수원 출생,<br>수능 중독에서 벗어난 지 1년차입니다.</p>
