--- a/author 무명.html
+++ b/author 무명.html
@@ -16,6 +16,11 @@
             position: center;
             top: 20px
         }
+        h2 {
+            font-size: 20px;
+            position: center;
+            top: 20px
+        }
         img {
             max-width: 30%;
             height: auto;
@@ -51,6 +56,7 @@
 <body>
     <h1>author</h1>
     <img src="무명.jpg" alt="무명">
+    <h2>무명</h2>
     <div class="author-description">
         <p>무명은 서울 일대에서 활동하는 일러스트레이터 및 편집 디자이너입니다.<br>책 [1989.5.35.]로 데뷔하여 [What's in my blue?] 등의 책을 집필하였습니다.</p>
     </div>
