--- a/author 구채현.html
+++ b/author 구채현.html
@@ -16,6 +16,11 @@
             position: center;
             top: 20px
         }
+        h2 {
+            font-size: 20px;
+            position: center;
+            top: 20px
+        }
         img {
             max-width: 30%;
             height: auto;
@@ -55,6 +60,7 @@
 <body>
     <h1>author</h1>
     <img src="구채현.JPG" alt="구채현">
+    <h2>구채현</h2>
     <div class="author-description">
         <p>구채현은 서울 용산과 마포 일대에 활동하는 일러스트레이터 및 편집 디자이너입니다.<br>때론 건조한 흑백만화를, 때론 서정적인 수채 그림을 그리며 주로 슬픔을 다루는 책을 만들곤 합니다.</p>
     </div>
