--- a/books.html
+++ b/books.html
@@ -17,6 +17,11 @@
             margin-top: 20px;
             margin-left: 30px
         }
+         h2 {
+            font-size: 35px;
+            margin-top: 20px;
+            margin-left: 35px
+        }
         .book-container {
             display: flex;
             flex-wrap: wrap;
