--- a/books.html
+++ b/books.html
@@ -105,7 +105,7 @@ h1 a {
         </div>
         <div class="book-item">
             <a href="book 우울 파르페.html">
-                <img src="우울 파르페 00.JPG" width="300px" height="auto" alt="book6">
+                <img src="우울 파르페 00.jpg" width="300px" height="auto" alt="book6">
                 <p class="book-title">우울 파르페</p>
             </a>
         </div>
