--- a/books.html
+++ b/books.html
@@ -32,6 +32,8 @@
         .book-item {
             flex: 0 0 20%;
             max-width: 20%;
+            margin: 35px;
+            text-align: left;
             padding: 10px;
         }
 
