Update book 다섯 번째 유서.html

--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>book</h1>
-    <img src="다섯 번째 유서 00.JPG" alt="다섯 번째 유서">
+    <img src="다섯 번째 유서 00.jpg" alt="다섯 번째 유서">
     <h2>다섯 번째 유서</h2>
     <div class="book-description">
         <p>대학 시험에 3년 연속 떨어졌습니다. 모두 실패했지만, 아무것도 남지 않은 것은 아닙니다. 공허함을 글로 쓰게 되었습니다.<br>네 개의 유서를 엮어 다섯 번째 유서로 삼았습니다. 그리고 이 책을 마지막 유서로 여기려 합니다.</p>
