Update book 다섯 번째 유서.html

--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -16,6 +16,11 @@
             position: center;
             top: 20px
         }
+         h2 {
+            font-size: 18px;
+            position: center;
+            top: 20px
+        }
         img {
             max-width: 30%;
             height: auto;
