Update book 다섯 번째 유서.html

--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -98,7 +98,7 @@
     </div>
     <h2>다섯 번째 유서</h2>
     <div class="book-description">
-        <p>다섯 번째 유서: 대학 시험에 3년 연속 떨어졌습니다. 모두 실패했지만, 아무것도 남지 않은 것은 아닙니다.<br>공허함을 글로 쓸 수 있게 되었습니다. 시간이 흐르면 모든 것이 변합니다.
+        <p>대학 시험에 3년 연속 떨어졌습니다. 모두 실패했지만, 아무것도 남지 않은 것은 아닙니다.<br>공허함을 글로 쓸 수 있게 되었습니다. 시간이 흐르면 모든 것이 변합니다.
             <br>저는 입시 앞에 무력해진 대신 책을 쓸 수 있는 사람이 되었습니다. 대학교에서 생활할 날들을 병원에서 나기도 했고,<br>그곳에서 좋은 인연을 만나기도 했습니다. 그동안 성장하며 쓴 글을 나누고자 책을 엮었습니다.<br>그리고 이 책을 마지막 유서로 여기려 합니다.
         <br><br><br>128*196mm / 에세이 / 96p / 10,000원</p>
     </div>
