Update book 우리 중 아무도 그곳을 모른다.html

--- a/book 우리 중 아무도 그곳을 모른다.html
+++ b/book 우리 중 아무도 그곳을 모른다.html
@@ -82,7 +82,7 @@
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="book-slider">
             <div class="book-item">
-                <img src="우리 중 아무도 그곳을 모른다 00.jpg" alt="우아모 00">
+                <img src="우리 중 아무도 그곳을 모른다 00.JPG" alt="우아모 00">
             </div>
             <div class="book-item">
                 <img src="우리 중 아무도 그곳을 모른다 01.jpg" alt="우아모 01">
@@ -96,7 +96,7 @@
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
-    <h2>다섯 번째 유서</h2>
+    <h2>우리 중 아무도 그곳을 모른</h2>
     <div class="book-description">
         <p>정신질환자와 폐쇄병동에 대한 편견을 깨부수고자 만든
             <br>아무도 알려주지 않았던 폐쇄병동에 대한 전반적인 지식과 주관적인 감상을 담은
