--- a/books.html
+++ b/books.html
@@ -101,7 +101,7 @@ h1 a {
     <div class="book-container">
         <div class="book-item">
             <a href="book 1989.5.35..html">
-                <img src="1989.5.35. 00.JPG" width="300px" height="auto" alt="book7">
+                <img src="1989.5.35. 00.jpg" width="300px" height="auto" alt="book7">
                 <p class="book-title">1989.5.35.</p>
             </a>
         </div>
