--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <style>
         body {
             background-color: #fffffa;
-            font-family: "Onul 아티클 부리 Regular", sans-serif;
-            font-family: "Constantia", sans-serif;
+            font-family: "Constantia", "Onul 아티클 부리 Regular", sans-serif;
             color: #9298cc;
         }
         h1 {
