--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -76,25 +76,25 @@
         }
          .modal {
             display: none;
-            position: fixed;
+            position: center;
             z-index: 1;
             left: 0;
             top: 0;
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color:#fffffa;
         }
 
         .modal-content {
             margin: auto;
             display: block;
-            width: 80%;
+            width: 100%;
             max-width: 700px;
         }
 
         .modal-content img {
-            width: 100%;
+            width: 200%;
             height: auto;
         }
 
