--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -76,10 +76,10 @@
         }
          .modal {
             display: none;
-            position: center;
+            position: auto;
             z-index: 1;
-            left: 0;
-            top: 0;
+            left: 100;
+            top: 100;
             width: 100%;
             height: 100%;
             overflow: auto;
