--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -106,7 +106,7 @@
 
         /* 닫기 버튼 */
        .close {
-    color: #9298cc;
+    color: #fffffa;
     position: absolute;
     top: 10px;
     right: 25px;
