Update book 다섯 번째 유서.html

--- a/book 다섯 번째 유서.html
+++ b/book 다섯 번째 유서.html
@@ -81,9 +81,9 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 80%; /* 모달 창 너비 */
-    max-width: 800px; /* 최대 너비 설정 */
-    max-height: 80%; /* 모달 창 높이 */
+    width: 100%; /* 모달 창 너비 */
+    max-width: 1200px; /* 최대 너비 설정 */
+    max-height: 90%; /* 모달 창 높이 */
     overflow: auto;
     background-color: #fffffa;
 }
@@ -106,7 +106,7 @@
 
         /* 닫기 버튼 */
        .close {
-    color: #fffffa;
+    color: #9298cc;
     position: absolute;
     top: 10px;
     right: 25px;
