--- a/book 우울증.html
+++ b/book 우울증.html
@@ -141,7 +141,7 @@
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
-    <h2>우리 중 아무도 그곳을 모른다</h2>
+    <h2>우울증</h2>
     <div class="book-description">
         <p>우울증 환자들이 느끼는 외로움, 벗어날 수 없는 삶의 굴레,
           <br>드리워진 죽음 앞에서의 망설임과 두려움을 담은 그림책입니다.
