--- a/book 우울증.html
+++ b/book 우울증.html
@@ -127,16 +127,16 @@
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <div class="book-slider">
             <div class="book-item">
-                <img src="우울증 00.JPG" alt="우아모 00"  onclick="openModal('우울증 00.JPG')">
+                <img src="우울증 00.JPG" alt="우울증 00"  onclick="openModal('우울증 00.JPG')">
             </div>
             <div class="book-item">
-                <img src="우울증 01.jpg" alt="우아모 01"  onclick="openModal('우울증 01.jpg')">
+                <img src="우울증 01.jpg" alt="우울증 01"  onclick="openModal('우울증 01.jpg')">
             </div>
             <div class="book-item">
-                <img src="우울증 02.jpg" alt="우아모 02"  onclick="openModal('우울증 02.jpg')">
+                <img src="우울증 02.jpg" alt="우울증 02"  onclick="openModal('우울증 02.jpg')">
             </div>
             <div class="book-item">
-                <img src="우울증 03.jpg" alt="우아모 03"  onclick="openModal('우울증 03.jpg')">
+                <img src="우울증 03.jpg" alt="우울증 03"  onclick="openModal('우울증 03.jpg')">
             </div>
         </div>
         <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -149,8 +149,8 @@
     </div>
 
     <div id="myModal" class="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
         <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
             <img id="modalImg" src="" alt="modal image">
         </div>
     </div>
@@ -206,3 +206,4 @@
     </script>
 </body>
 </html>
+
