--- a/book 우울증.html
+++ b/book 우울증.html
@@ -145,7 +145,7 @@
     <div class="book-description">
         <p>우울증 환자들이 느끼는 외로움, 벗어날 수 없는 삶의 굴레,
           <br>드리워진 죽음 앞에서의 망설임과 두려움을 담은 그림책입니다.
-        <br><br><br>150*100mm / 그림 / 24p / 8,000원</p>
+        <br><br><br>150*100mm / 그림책 / 24p / 8,000원</p>
     </div>
 
     <div id="myModal" class="modal">
