--- a/book 우울증.html
+++ b/book 우울증.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book 다섯 번째 유서</title>
+    <title>Book 우울증</title>
     <style>
         body {
             background-color: #fffffa;
