Update book 우울 파르페.html

--- a/book 우울 파르페.html
+++ b/book 우울 파르페.html
@@ -144,7 +144,7 @@
     <h2>우울 파르페</h2>
     <div class="book-description">
         <p>파르페 몇 개쯤은 삼켜도 좋으나 자주 먹는다면 몸 관리도 해야겠죠.<br>저는 우울 파르페를 많이 먹었기 때문에 슬슬 관리를 해보려 합니다.<br>우울 파르페를 끊는 날이 와도 글을 쓸 수 있도록,<br>2024년 4월 15일 오전 12시 58분 여연경 올림.
-        <br><br><br>130*190mm / 에세이 / 100p / 14,000원</p>
+        <br><br><br>130*190mm / 에세이 / 100p / 14,000원 / 여연경</p>
     </div>
 
     <div id="myModal" class="modal">
