--- a/book 사낚어.html
+++ b/book 사낚어.html
@@ -144,7 +144,7 @@
     <h2>사람낚는어부가되기에는낚아야할생각이너무많아만든책</h2>
     <div class="book-description">
         <p>살면서 누구나 한 번쯤 느끼는 자신을 향한 혐오, 타인을 향한 혐오, 사회를 향한 혐오.<br>그 상처 언저리에서 발견하는 슬픔이 가진 위로의 힘을 담은 그래픽 노블입니다.
-        <br><br><br>210*297mm / 일러스트 / 32p / 10,000원</p>
+        <br><br><br>210*297mm / 일러스트 / 32p / 10,000원 / 구채현 </p>
     </div>
 
     <div id="myModal" class="modal">
