--- a/book 1989.5.35..html
+++ b/book 1989.5.35..html
@@ -147,7 +147,7 @@
     <h2>1989.5.35.</h2>
     <div class="book-description">
         <p>천안문 항쟁 과정을 무명 작가의 감각적인 일러스트집으로 재탄생시켰습니다.<br>레드와 블루의 상징을 활용한 재미있는 일러스트집을 구매하실 수 있습니다.<br>페이지를 넘김에 따라 달라지는 색상 비율로 한 층 더 재미를 볼 수 있습니다.<br>51개의 일러스트가 수록되어 있으며, 한국어와 중국어가 병기되어 있습니다.
-        <br><br><br>249*166mm / 일러스트 / 104p / 25,000원</p>
+        <br><br><br>249*166mm / 일러스트 / 104p / 25,000원 / 무명</p>
     </div>
 
     <div id="myModal" class="modal">
