--- a/books.html
+++ b/books.html
@@ -82,6 +82,12 @@ h1 a {
             padding: 10px; /* 버튼 간격 조절 */
 }
 
+                a {
+    text-decoration: none; /* 밑줄 제거 */
+    color: #9298cc; /* 텍스트 색상 변경 */
+    /* 다른 원하는 스타일 추가 */
+}
+        
     </style>
 </head>
 <body>
