--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             text-align: center;
             margin-top: 20px;
      
-        #description p {
+        #description {
             font-size: 13pt;
             line-height: 20pt;
 }
@@ -72,7 +72,7 @@
             <li><a href="authors.html">authors</a></li>
             <li><a href="books.html">books</a></li>
             <li><a href="goods.html">goods shop</a></li>
-            <li><a href="instagram.html">instagram</a></li>
+            <li><a href="https://www.instagram.com/aod.inc/">instagram</a></li>
         </ul>
     </nav>
     <div id="logo">
