--- a/goods.html
+++ b/goods.html
@@ -107,7 +107,7 @@ h1 a {
     <div class="goods-container">
         <div class="goods-item">
             <a href="goods 사낚어 스티커.html">
-                <img src="goods 사낚어 투명 리무버블 스티커.jpg" width="300px" height="auto" alt="book6">
+                <img src="goods 사낚어 투명 리무버블 스티커.jpg" width="300px" height="auto" alt="goods6">
                 <p class="goods-title">사낚어 투명 리무버블 스티커</p>
             </a>
         </div>
