--- a/goods.html
+++ b/goods.html
@@ -107,7 +107,7 @@ h1 a {
     <div class="goods-container">
         <div class="goods-item">
             <a href="goods 사낚어 스티커.html">
-                <img src="goods 사낚어 투명 리무버블 스티커.jpg" width="300px" height="auto" alt="goods6">
+                <img src="goods 사낚어 투명 리무버블 스티커.JPG" width="300px" height="auto" alt="goods6">
                 <p class="goods-title">사낚어 투명 리무버블 스티커</p>
             </a>
         </div>
@@ -119,25 +119,25 @@ h1 a {
         </div>
         <div class="goods-item">
             <a href="goods 다섯 번째 유서 포스터.html">
-                <img src="goods 다섯 번째 유서 포스터.jpg" width="300px" height="auto" alt="goods4">
+                <img src="goods 다섯 번째 유서 포스터.JPG" width="300px" height="auto" alt="goods4">
                 <p class="goods-title">다섯 번째 유서 poster</p>
             </a>
         </div>
         <div class="goods-item">
             <a href="goods 유서장.html">
-                <img src="goods 유서장 00.jpg" width="300px" height="auto" alt="goods3">
+                <img src="goods 유서장 00.JPG" width="300px" height="auto" alt="goods3">
                 <p class="goods-title">유서장 2종</p>
             </a>
         </div>
         <div class="goods-item">
             <a href="goods aod 포스터 채현.html">
-                <img src="goods aod 포스터 채현.jpg" width="300px" height="auto" alt="goods2">
+                <img src="goods aod 포스터 채현.JPG" width="300px" height="auto" alt="goods2">
                 <p class="goods-title">AoD Poster 2</p>
             </a>
         </div>
         <div class="goods-item">
             <a href="goods aod 포스터 연경.html">
-                <img src="goods aod 포스터 연경.jpg" width="300px" height="auto" alt="goods1">
+                <img src="goods aod 포스터 연경.JPG" width="300px" height="auto" alt="goods1">
                 <p class="goods-title">AoD Poster 1</p>
             </a>
         </div>
