--- a/goods.html
+++ b/goods.html
@@ -114,7 +114,7 @@ h1 a {
         <div class="goods-item">
             <a href="goods 우울증 엽서.html">
                 <img src="goods 우울증 엽서 00.jpg" width="300px" height="auto" alt="goods5">
-                <p class="goods-title">우울증 엽서 </p>
+                <p class="goods-title">우울증 엽서 5종</p>
             </a>
         </div>
         <div class="goods-item">
